# code-connect

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Package.resolved  Package.swift  Package@swift-5.10.0.swift  README.md
react/: BUILD.bazel  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
react/scripts/: import-icons.ts
react/src/: cli.ts
react/src/__test__/: e2e_connect_command.test.ts
react/src/__test__/e2e_connect_command/: StorybookComponent.tsx
react/src/commands/: connect.ts
react/src/common/: api.ts  compiler.ts  external.ts  figma_connect.ts  intrinsics.ts  logging.ts  parser.ts  parser_template_helpers.ts  project.ts
react/src/common/__test__/: ButtonArrowFunction.figma.tsx  ForwardRefComponent.figma.tsx  ImportMappingsTest.figma.tsx  ImportMappingsTest.tsx  InvalidCodeConnect.figma.tsx  MemoizedComponent.figma.tsx  PathAliasImport.figma.tsx  PropMappings.figma.tsx  PropsSpread.tsx  PropsSpreadWithDestructuring.figma.tsx  SignatureManyImports.figma.tsx  SignatureManyImports.tsx  TestComponents.tsx  VariableRefFigmaNode.figma.tsx  VariantRestriction.figma.tsx  parser.test.ts  tsconfig.json
react/src/common/__test__/expected_templates/: Button.expected_template  ButtonWithIcon.expected_template  EnumLikeBooleanFalseProp.expected_template  MemoizedComponent.expected_template
react/src/connect/: create.ts  delete_docs.ts  helpers.ts  upload.ts  validation.ts
react/src/storybook/: convert.ts  external.ts
react/src/storybook/__test__/: convert.test.ts
react/src/storybook/__test__/examples/: FunctionComponent.tsx  (+7 more)
(+422 files in other folders)
