load("@aspect_bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//bazel/js:defs.bzl", "ts_project")

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "ts",
    srcs = glob(
        [
            "src/**/*.ts",
        ],
        exclude = [
            "src/**/__test__/**",
        ],
    ),
    tsconfig = "tsconfig.json",
    deps = [
        ":node_modules/@types",
        ":node_modules/axios",
        ":node_modules/chalk",
        ":node_modules/commander",
        ":node_modules/glob",
        ":node_modules/lodash",
        ":node_modules/minimatch",
        ":node_modules/prettier",
        ":node_modules/typescript",
    ],
)

copy_to_directory(
    name = "dist",
    srcs = [
        ":ts",
        ":ts_typecheck",
    ],
    replace_prefixes = {
        "src/": "/",
    },
)

write_source_files(
    name = "build_dist",
    files = {"dist": "dist"},
    visibility = ["//web:__pkg__"],
)

npm_package(
    name = "npm_package",
    srcs = [
        "package.json",
        ":dist",
    ],
    package = "@figma/code-connect",
    visibility = ["//visibility:public"],
)
